--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Git is Awesome</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis et ipsam expedita deserunt suscipit! Amet inventore numquam deleniti. Quibusdam corrupti eveniet perspiciatis sequi tempora incidunt ullam cum animi exercitationem ab!</p>
 </body>
 </html>
